final backend security

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
         </session-timeout>
     </session-config>
 
-    <!--<security-constraint>
+    <security-constraint>
         <web-resource-collection>
             <web-resource-name>All</web-resource-name>
             <url-pattern>/</url-pattern>
@@ -15,5 +15,5 @@
         <user-data-constraint>
             <transport-guarantee>CONFIDENTIAL</transport-guarantee>
         </user-data-constraint>
-    </security-constraint>-->
+    </security-constraint>
 </web-app>
